fix[style]: active overflow-y auto

--- a/src/index.css
+++ b/src/index.css
@@ -19,7 +19,8 @@ html {
 }
 
 body {
-  overflow: hidden;
+  overflow-x: hidden;
+  overflow-y: auto;
   margin: 0;
   padding: 0;
   font-family: var(--font-bold);
